--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -15,5 +15,9 @@
 - create:
     - ~/customization-folder
 
-#- shell:
-#    - [git submodule update --init --recursive, Installing submodules]
+- shell:
+    -
+      command: ./setup_homebrew.zsh
+      stdout: true
+      stderr: true
+    # - [git submodule update --init --recursive, Installing submodules]
