--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -19,8 +19,7 @@
     - ~/customization-folder
 
 - shell:
-    -
-      command: ./setup_homebrew.zsh
+    - command: ./setup_homebrew.zsh
       stdout: true
       stderr: true
     # - [git submodule update --init --recursive, Installing submodules]
