add asdf config

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -12,6 +12,7 @@
     ~/.tmux.conf:
     ~/.gitconfig:
     ~/.ideavimrc:
+    ~/.tool-versions:
     ~/.config/bat:
       create: true
       path: config/bat
