--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -24,5 +24,5 @@
     - command: ./setup_homebrew.zsh
       stdout: true
       stderr: true
-    # - [git submodule update --init --recursive, Installing submodules]
+    - [git submodule update --init --recursive, Installing submodules]
     # sudo ln -s $(brew --prefix)/opt/libpq/bin/psql /usr/local/bin/psql
